fix overflow x

--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
-body {
+body,
+html {
   font-family: "Roboto", sans-serif;
   overflow-x: hidden;
   user-select: none;
